# facial-recognition-playground

./: .gitignore  pyproject.toml
backend/: detectors.py  main.py  schemas.py
frontend/: app.js  index.html  style.css
