[project]
name = "facial-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "fastapi>=0.138.2",
    "mediapipe>=0.10.35",
    "numpy>=2.5.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "setuptools<70",
    "uvicorn[standard]>=0.49.0",
]
